修复了参数栏部分浏览器占全屏的BUG。

--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
                         </div>
                         <div style="width: 97%;margin: 0 auto;margin-top: 20px;">
                             <span title="复制全部参数" @click="copyAll(1)"
-                                style="padding:5 10;background: #ff3f34;color: white;font-size: 12px;padding-right: 30px;position: relative;cursor: pointer;">
+                                style="padding:5px 10px;background: #ff3f34;color: white;font-size: 12px;padding-right: 30px;position: relative;cursor: pointer;">
                                 Header
                                 <img src="img/复制.svg" width="14px" style="position: absolute;right: 7px;top:7px">
                             </span>
@@ -955,7 +955,7 @@
                                                 class="updateTag">
                                             </div>
                                             <input v-model="headerItem.exampleValue" placeholder="实例值"
-                                                style="width: 95%;height: 100%;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
+                                                style="width: 95%;;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
                                             <img src="img/编辑.svg" width="20px" style="position: absolute;right: 5px;">
                                         </div>
                                     </div>
@@ -964,7 +964,7 @@
                         </div>
                         <div style="width: 97%;margin: 0 auto;margin-top: 20px;">
                             <span title="复制全部参数" @click="copyAll(2)"
-                                style="padding:5 10;background: #ff3f34;color: white;font-size: 12px;padding-right: 30px;position: relative;cursor: pointer;">
+                                style="padding:5px 10px;background: #ff3f34;color: white;font-size: 12px;padding-right: 30px;position: relative;cursor: pointer;">
                                 Body
                                 <img src="img/复制.svg" width="14px" style="position: absolute;right: 7px;top:7px">
                             </span>
@@ -1030,7 +1030,7 @@
                                                 class="updateTag">
                                             </div>
                                             <input v-model="parametesItem.exampleValue" placeholder="实例值"
-                                                style="width: 95%;height: 100%;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
+                                                style="width: 95%;;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
                                             <img src="img/编辑.svg" width="20px" style="position: absolute;right: 5px;">
                                         </div>
                                     </div>
@@ -1099,7 +1099,7 @@
                             <div style="position:relative;">
                                 <div>
                                     <span
-                                        style="padding:5 10;background: #ff3f34;color: white;font-size: 12px;padding-right: 10px;position: relative;">
+                                        style="padding:5px 10px;background: #ff3f34;color: white;font-size: 12px;padding-right: 10px;position: relative;">
                                         Header（{{defalutHeader.length}})
                                     </span>
                                 </div>
@@ -1140,25 +1140,25 @@
                                             </div>
                                             <div style="width: 15%;" class="td">
                                                 <input v-model="headerItem.key" placeholder="字段名称"
-                                                    style="width: 95%;height: 100%;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
+                                                    style="width: 95%;;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
                                                 <img src="img/编辑.svg" width="20px"
                                                     style="position: absolute;right: 5px;">
                                             </div>
                                             <div style="width: 15%;" class="td">
                                                 <input v-model="headerItem.type" placeholder="类型"
-                                                    style="font-weight: 900;width: 95%;height: 100%;color:#fc5c65;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
+                                                    style="font-weight: 900;width: 95%;;color:#fc5c65;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
                                                 <img src="img/编辑.svg" width="20px"
                                                     style="position: absolute;right: 5px;">
                                             </div>
                                             <div style="width: 20%;position: relative;" class="td">
                                                 <input v-model="headerItem.exampleValue" placeholder="实例值"
-                                                    style="width: 95%;height: 100%;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
+                                                    style="width: 95%;;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
                                                 <img src="img/编辑.svg" width="20px"
                                                     style="position: absolute;right: 5px;">
                                             </div>
                                             <div style="width: 20%;color:#666" class="td">
                                                 <input v-model="headerItem.remarks" placeholder="备注信息"
-                                                    style="width: 95%;height: 100%;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
+                                                    style="width: 95%;;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
                                                 <img src="img/编辑.svg" width="20px"
                                                     style="position: absolute;right: 5px;">
                                             </div>
@@ -1228,7 +1228,7 @@
                                         </div>
                                         <div style="width: 20%;cursor: pointer;" class="td">
                                             <input v-model="user.name" placeholder="用户昵称"
-                                                style="width: 95%;height: 100%;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
+                                                style="width: 95%;;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
                                             <img src="img/编辑.svg" width="20px" style="position: absolute;right: 5px;">
                                         </div>
                                         <div style="width: 15%;font-size: 13px;color: black;" class="td">
@@ -1241,7 +1241,7 @@
                                         </div>
                                         <div style="width: 20%;color:#666" class="td">
                                             <input v-model="user.remarks" placeholder="备注信息"
-                                                style="width: 95%;height: 100%;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
+                                                style="width: 95%;;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
                                             <img src="img/编辑.svg" width="20px" style="position: absolute;right: 5px;">
                                         </div>
                                         <div style="width: 10%;color:#fc5c65;cursor: pointer;" title="移除" class="td">
@@ -1255,7 +1255,7 @@
                                     <div style="position:relative;">
                                         <div>
                                             <span
-                                                style="padding:5 10;background: #ff3f34;color: white;font-size: 12px;padding-right: 10px;position: relative;">
+                                                style="padding:5px 10px;background: #ff3f34;color: white;font-size: 12px;padding-right: 10px;position: relative;">
                                                 Header（{{editUser.header? editUser.header.length :0}})
                                             </span>
                                         </div>
@@ -1296,25 +1296,25 @@
                                                     </div>
                                                     <div style="width: 15%;" class="td">
                                                         <input v-model="headerItem.key" placeholder="字段名称"
-                                                            style="width: 95%;height: 100%;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
+                                                            style="width: 95%;;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
                                                         <img src="img/编辑.svg" width="20px"
                                                             style="position: absolute;right: 5px;">
                                                     </div>
                                                     <div style="width: 15%;" class="td">
                                                         <input v-model="headerItem.type" placeholder="类型"
-                                                            style="font-weight: 900;width: 95%;height: 100%;color:#fc5c65;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
+                                                            style="font-weight: 900;width: 95%;;color:#fc5c65;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
                                                         <img src="img/编辑.svg" width="20px"
                                                             style="position: absolute;right: 5px;">
                                                     </div>
                                                     <div style="width: 20%;position: relative;" class="td">
                                                         <input v-model="headerItem.exampleValue" placeholder="实例值"
-                                                            style="width: 95%;height: 100%;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
+                                                            style="width: 95%;;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
                                                         <img src="img/编辑.svg" width="20px"
                                                             style="position: absolute;right: 5px;">
                                                     </div>
                                                     <div style="width: 20%;color:#666" class="td">
                                                         <input v-model="headerItem.remarks" placeholder="备注信息"
-                                                            style="width: 95%;height: 100%;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
+                                                            style="width: 95%;;outline: none;border-width: 0px;margin: 0 auto;text-align: center;">
                                                         <img src="img/编辑.svg" width="20px"
                                                             style="position: absolute;right: 5px;">
                                                     </div>
